Внесение исправления на основе замечаний в комментариях. Цвет в темной теме у меня соответствует макету, почему у вас отображается некорректно не могу понять, предоставляю скриншот по ссылке (если этого недостаточно, дополнительно могу отправить видео-файл для подтверждения) https://ibb.co/6Bv8SpW Добавлены недостающие действия для аналитики. Внесены изменения в экран статистики (заглушка отображается корректно). Количество дней в английской локализации теперь отображается корректно (days, day).

--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -55,6 +55,7 @@
 "filters" = "Filters";
 "toPin" = "Pin";
 "unPin" = "Unpin";
+"nothingFound" = "Nothing Found";
 
 //ScheduleViewController
 "schedule" = "Schedule";
@@ -85,3 +86,6 @@
 
 //TrackerStore
 "pin" = "Pinned";
+
+//FilterViewController
+"filters" = "Filters";
