--- a/Resources/en.lproj/Localizable.stringsdict
+++ b/Resources/en.lproj/Localizable.stringsdict
@@ -13,15 +13,11 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>zero</key>
-			<string>0 дней</string>
+			<string>No days</string>
 			<key>one</key>
-			<string>%d день</string>
-			<key>few</key>
-			<string>%d дня</string>
-			<key>many</key>
-			<string>%d дней</string>
+			<string>1 day</string>
 			<key>other</key>
-			<string>%d дня</string>
+			<string>%d days</string>
 		</dict>
 	</dict>
 </dict>
